--- a/index/styles.css
+++ b/index/styles.css
@@ -12,7 +12,7 @@ h1{
 
 .my-brand{
   font-size: 18px;
-  font-style: italic;
+  font-style: oblique;
   text-transform: lowercase;
-  color: red;
+  color: green;
 }
